# tender-scraper-analyzer

./: .gitignore  README.md  cookies.json  justfile  pyproject.toml  requirements.txt
.actor/: actor.json  input_schema.json
src/: bucket_opencloud.ipynb  demo_s3_upload.py  list_files_bucket.py  main.py  summary_extractor.py  test_s3_upload.py  utils.py
src/database/: database_connector.py
src/document_storage/: document_storage.py  tender_storage.py  tender_storage_management.py
src/rag_pipeline/: prompts.py  summary_extractor.py
src/rag_pipeline/indexer/: indexing_pipeline.py
src/rag_pipeline/pipeline/: query_pipeline.py  summary_extractor.py
src/rag_pipeline/utils/: prompts.py
src/scraper/: scraper.py  scraper_base_pdf.py  scraper_dtvp.py  scraper_evergabe.py  scraper_it_ausschreibung.py  scraper_router.py
src/test/: test_scraper.py  test_storage.py
